--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,19 @@
 }
 
 .container-docs {
+    margin-top: 40px;;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .content-docs {
-    margin: 5px 10px 5px 10px;
+    margin: 5px;
 }
 
 .del-docs {
-    margin-top: 5px;;
+    margin-top: 5px;
+    margin-right: 10px;
     float: right;
 }
 
@@ -22,4 +24,12 @@
     max-width: 300px;
     max-height: 300px;
     border-radius: 20px;
+}
+
+.zoom {
+    transition: transform .2s; /* Animation */
+}
+
+.zoom:hover {
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
