--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,8 @@
 .zoom:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+.nav {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
